--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,61 +1,60 @@
 <div class="tabs-wrapper">
-<div
-  class="tabs-container"
-  [ngClass]="{
+  <div
+    [ngClass]="{
     sticky: isSticky,
     pushed: headerService.isVisible,
     normal: !headerService.isVisible
   }"
-  [ngStyle]="{ width: width }"
->
-  <div class="logo-title">
-    <a  routerLink="">
+    [ngStyle]="{ width: width }"
+    class="tabs-container"
+  >
+    <div class="logo-title">
+      <a (click)="setTab()" routerLink="">
+        <div class="logo">
+          <svg-icon src="/assets/icons/logo.svg"></svg-icon>
+        </div>
+        <div class="title">
+          <span>Magic tap</span>
+        </div>
+      </a>
 
-    <div class="logo">
-        <svg-icon src="/assets/icons/logo.svg"></svg-icon>
     </div>
-    <div class="title">
-    <span>Magic tap</span>
-    </div>
-    </a>
-
-  </div>
-  <div
-    class="tabs"
-    [ngStyle]="{
+    <div
+      [ngStyle]="{
       padding: padding
     }"
-  >
+      class="tabs"
+    >
 
-    @for (tab of tabs; track tab) {
-    <div
-      class="tab-wrapper"
-      [ngStyle]="{
+      @for (tab of tabs; track tab) {
+        <div
+          class="tab-wrapper"
+          [ngStyle]="{
     'justify-content': justifyContent
     }"
-      >
-        <div
-          class="tab"
-          [ngClass]="{
+        >
+          <div
+            class="tab"
+            [ngClass]="{
     active: tab === currentTab
     }"
-          (click)="setActiveTab(tab)"
-        >
-          <svg-icon [src]="tab.icon"/>
-          <span
-            class="title"
-            [ngClass]="{
+            (click)="setActiveTab(tab)"
+          >
+            <svg-icon [src]="tab.icon"/>
+            <span
+              class="title"
+              [ngClass]="{
     bold: tab.subtitle
     }"
-            [innerHTML]="tab.title"
-          ></span>
-          @if (tab.subtitle) {
-    }
+              [innerHTML]="tab.title"
+            ></span>
+            @if (tab.subtitle) {
+            }
+          </div>
+        </div>
+      }
     </div>
   </div>
-    }
-  </div>
-</div>
 
   <a class="settings" routerLink="/settings">
     <svg-icon src="/assets/icons/settings.svg"></svg-icon>
