--- a/src/app/shared/components/buttons/primary-button/themes/lilac.scss
+++ b/src/app/shared/components/buttons/primary-button/themes/lilac.scss
@@ -2,14 +2,13 @@
 
 button,
 a {
-  &.dark {
+  &.lilac {
     &.standard {
       background: $brand-900;
       color: $primary-white;
 
-      @include hover {
-        background: $brand-700;
-      }
     }
+
+
   }
 }
