--- a/src/assets/scss/_font-family.scss
+++ b/src/assets/scss/_font-family.scss
@@ -1,47 +1,59 @@
 @font-face {
   font-family: "Inter-regular";
   src: url("/assets/fonts/Inter_18pt-Regular.ttf") format("truetype"),
-    url("/assets/fonts/Inter_18pt-Regular.ttf") format("truetype");
+  url("/assets/fonts/Inter_18pt-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
 @font-face {
   font-family: "Inter-bold";
   src: url("../fonts/Inter_18pt-Bold.ttf") format("truetype"),
-    url("../fonts/Inter_18pt-Bold.ttf") format("truetype");
+  url("../fonts/Inter_18pt-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
 @font-face {
   font-family: "Inter-semibold";
   src: url("../fonts/Inter_18pt-SemiBold.ttf") format("truetype"),
-    url("../fonts/Inter_18pt-SemiBold.ttf") format("truetype");
+  url("../fonts/Inter_18pt-SemiBold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
 @font-face {
   font-family: "Inter-extrabold";
   src: url("../fonts/Inter_18pt-ExtraBold.ttf") format("truetype"),
-    url("../fonts/Inter_18pt-ExtraBold.ttf") format("truetype");
+  url("../fonts/Inter_18pt-ExtraBold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
 @font-face {
   font-family: "Inter-thin";
   src: url("../fonts/Inter_18pt-Thin.ttf") format("truetype"),
-    url("../fonts/Inter_18pt-Thin.ttf") format("truetype");
+  url("../fonts/Inter_18pt-Thin.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
 @font-face {
   font-family: "Inter-light";
   src: url("../fonts/Inter_18pt-Light.ttf") format("truetype"),
-    url("../fonts/Inter_18pt-Light.ttf") format("truetype");
+  url("../fonts/Inter_18pt-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
