added login form

--- a/src/app/core/components/header-menu/header-menu.component.html
+++ b/src/app/core/components/header-menu/header-menu.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="logout">
-      <div class="header-menu-item">
+      <div class="header-menu-item" routerLink="/login">
         <svg-icon src="assets/icons/account/logout.svg"></svg-icon>
         <span>Выйти</span>
       </div>
