--- a/src/app/shared/components/buttons/primary-button/primary-button.component.html
+++ b/src/app/shared/components/buttons/primary-button/primary-button.component.html
@@ -58,6 +58,9 @@
       [ngClass]="{
         disabled: disabled || isLoading(),
       }"
+      [ngStyle]="{
+      height: height
+      }"
       [routerLink]="link"
     >
       @if (isLoading()) {
