--- a/src/app/shared/components/buttons/primary-button/themes/light.scss
+++ b/src/app/shared/components/buttons/primary-button/themes/light.scss
@@ -8,6 +8,7 @@ a {
     &.standard {
       background: $neutral-100;
       border: 1px solid $neutral-300;
+      color: $primary-black;
 
       @include hover {
         background: $brand-100;
