--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,4 +1,3 @@
-
 $primary-white: #FFFFFF;
 $primary-black: #000000;
 $primary-red: #ED2531;
@@ -49,7 +48,7 @@ $cl-gray: #696969;
 $cl-gray-audio: #e2e5e7;
 $cl-gray-light: #f3f4f5;
 $cl-gray-dark: #45464f;
-$cl-gray-middle: #d1d1d1;
+$cl-gray-middle: #d00000;
 $cl-gray-light-bg: #f1f3f4;
 $cl-gray-scroll: #b3b3b3;
 $cl-gray-table-header: #e6e9ed;
@@ -57,7 +56,7 @@ $cl-gray-table-border-bottom: #ddd;
 $cl-table-odd: #f7f9fa;
 $cl-white-bg: #ffffff;
 $cl-white: rgba($cl-white-bg, 0.9);
-$cl-blue: #0692d8;
+$cl-blue: #dc0c0c;
 $cl-blue-middle: #1666bc;
 $cl-blue-tooltip: #3381d4;
 $cl-red: #ff2e24;
