--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -8,7 +8,7 @@
 
 @mixin heading_1 {
   @include font-(48px, 48px);
-  font-family: "Inter-extrabold";
+  font-family: "Inter-extrabold", serif;
 }
 
 @mixin heading_2 {
