--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,30 +1,48 @@
 <div class="sidebar">
-  <ul>
-    <li>
-      <a routerLink="/main" routerLinkActive="active">
-        <span class="menu-icon material-icons">grade</span>
-        <span class="menu-text">Главная</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/current-benefits" routerLinkActive="active">
-        <span class="menu-icon material-icons">grade</span>
-        <span class="menu-text">Действующие льготы</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/catalog" routerLinkActive="active">
-        <span class="menu-icon material-icons">schedule</span>
-        <span class="menu-text">Каталог льгот</span>
-      </a>
-    </li>
-    <li>
-      <a routerLink="/questions-and-answers" routerLinkActive="active">
-        <span class="menu-icon material-icons">access_time</span>
-        <span class="menu-text">Вопросы и ответы</span>
-      </a>
-    </li>
+  <div class="sidebar__container">
 
-  </ul>
+    <div class="logo-title">
+      <a routerLink="">
+        <div class="logo">
+          <svg-icon src="/assets/icons/logo.svg"></svg-icon>
+        </div>
+        <div class="title">
+          <span>Magic tap</span>
+        </div>
+      </a>
+    </div>
+
+    <ul>
+      <li>
+        <a routerLink="/main" routerLinkActive="active">
+          <svg-icon src="/assets/icons/tabs/home.svg"></svg-icon>
+          <span class="menu-text">Главная</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/current-benefits" routerLinkActive="active">
+          <svg-icon src="/assets/icons/tabs/current-benefits.svg"></svg-icon>
+          <span class="menu-text">Действующие льготы</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/catalog" routerLinkActive="active">
+          <svg-icon src="/assets/icons/tabs/catalog.svg"></svg-icon>
+          <span class="menu-text">Каталог льгот</span>
+        </a>
+      </li>
+      <li>
+        <a routerLink="/questions-and-answers" routerLinkActive="active">
+          <svg-icon src="/assets/icons/tabs/questions-and-answers.svg"></svg-icon>
+          <span class="menu-text">Вопросы и ответы</span>
+        </a>
+      </li>
+
+    </ul>
+  </div>
+  <a class="settings" routerLink="/settings">
+    <svg-icon src="/assets/icons/settings.svg"></svg-icon>
+    <span>Настройки</span>
+  </a>
 </div>
 
