--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -2,7 +2,7 @@
 
 /* Define a mixin for common styles */
 @mixin menu-item {
-  color: #d4d4d4;
+  color: $primary-black;
   text-decoration: none;
   display: flex;
   align-items: center;
@@ -23,10 +23,53 @@
 .sidebar {
   @include flexbox;
   @include flex-direction(column);
-
   border-right: 1px solid $neutral-200;
   height: 96vh;
+  min-width: 274px;
   padding: 24px 16px;
+
+  &__container {
+    @include flexbox;
+    @include flex-direction(column);
+    @include gap(40px);
+
+    .logo-title {
+
+      a {
+        @include flexbox;
+        @include align-items(center);
+        @include gap(16px);
+        @include heading_4;
+        color: $brand-900;
+        text-decoration: none;
+
+        .logo {
+          width: 34px;
+          height: 34px;
+        }
+      }
+    }
+
+    ul {
+      li {
+
+      }
+    }
+  }
+
+  .settings {
+    @include flexbox;
+    @include align-items(center);
+    @include gap(16px);
+    padding: 16px 12px;
+
+    margin-top: auto;
+
+    color: $primary-black;
+    text-decoration: none;
+    cursor: pointer;
+
+  }
 }
 
 .sidebar ul {
@@ -40,18 +83,41 @@
 
 .sidebar li a {
   @include menu-item;
+  @include flexbox;
+  @include align-items(center);
+  @include gap(16px);
+  padding: 12px 16px;
+
+  user-select: none;
+  cursor: pointer;
+
+  @include paragraph;
+
+  svg-icon {
+    width: 20px;
+    height: 20px;
+  }
+
 
   &:hover {
     // box-shadow: 0px 0px 20px rgba(0, 0, 255, 0.5);
-    background-color: rgb(241, 241, 241);
-    color: #6c6c6c;
+    background: $neutral-100;
+
 
   }
 
   &.active {
-    color: #000000;
-    // box-shadow: 3px 3px 5px #b9b9b9, -3px -3px 5px #ffffff;
-    background-color: rgb(241, 241, 241);
+    color: $brand-900;
+    background: $brand-100;
+    border-radius: 8px;
+    cursor: default;
+
+    svg-icon {
+
+      path {
+        fill: $brand-900
+      }
+    }
 
 
     // border-radius: 5%;
