--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="authForm">
+<form (ngSubmit)="onSubmit()" [formGroup]="authForm">
   <div class="input">
     <app-input
       [autocomplete]="true"
@@ -16,11 +16,18 @@
   </div>
 
   <app-primary-button
+    [disabled]="isLoading"
     [label]="'Войти'"
     height="26px"
-    routerLink="/"
     styling="standard"
     theme="dark"
-    type="routerLink"
+    type="submit"
   />
+  <div *ngIf="errorMessage" class="error-message">
+    {{ errorMessage }}
+  </div>
+
+  <div *ngIf="isLoading" class="loading-spinner">
+    Loading...
+  </div>
 </form>
